adding link to the a tag.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class = "panel panel4">#A7ACA8</div>
         <div class = "panel panel5">#6497B4</div>
     </div>
-    <a href="">Made by lavaboy1738 <i class="fab fa-github"></i></a>
+    <a href="https://github.com/lavaboy1738/flex-panels" target="_blank">Made by lavaboy1738 <i class="fab fa-github"></i></a>
     <script src="main.js"></script>
     <script src="https://kit.fontawesome.com/d961edb034.js" crossorigin="anonymous"></script>
 </body>
